--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "priv/icons"]
-	path = priv/icons
+[submodule "priv/remix"]
+	path = priv/remix
 	url = https://github.com/Remix-Design/RemixIcon.git
